src/snapshots/alma__parser__tests__test_expression__lambda.snap
---
source: src/parser.rs
assertion_line: 2226
expression: "parse(\"\\\\a -> a\")"
---
Input:

\a -> a

Result:

Node {
    start: 0,
    end: 3,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Lambda(
            Lambda {
                parameters: [
                    Node {
                        start: 1,
                        end: 1,
                        value: Identifier(
                            Node {
                                start: 1,
                                end: 1,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    },
                ],
                body: Node {
                    start: 3,
                    end: 3,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Identifier(
                            None,
                            Identifier(
                                Node {
                                    start: 3,
                                    end: 3,
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 1,
                                        },
                                    },
                                },
                            ),
                        ),
                    },
                },
            },
        ),
    },
}
