src/snapshots/alma__parser__tests__test_expression__new_line_string.snap
---
source: src/parser.rs
assertion_line: 2234
expression: "parse(\"\\\"\\n\\\"\")"
---
Input:

"
"

Result:

Index(
    0,
)

{
    Index(
        0,
    ): Expression {
        span: Index(
            0,
        ),
        typ: RefCell {
            value: None,
        },
        expr: String_(
            SymbolU32 {
                value: 1,
            },
        ),
    },
}

{
    Index(
        0,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            0,
        ),
    },
}
