src/snapshots/alma__parser__tests__test_expression__parenthesis-5.snap
---
source: src/parser.rs
assertion_line: 2186
expression: "parse(\"(\n  ((1))\n)\")"
---
Input:

(
  ((1))
)

Result:

Node {
    start: Idx(
        3,
    ),
    end: Idx(
        3,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Float(
            1.0,
        ),
    },
}
