src/snapshots/alma__parser__tests__test_expression__parenthesis.snap
---
source: src/parser.rs
assertion_line: 2223
expression: "parse(\"(\\\"\\\")\")"
---
Input:

("")

Result:

Expression {
    span: Index(
        0,
    ),
    typ: RefCell {
        value: None,
    },
    expr: String_(
        SymbolU32 {
            value: 1,
        },
    ),
}
