src/snapshots/alma__parser__tests__test_expression__property_access.snap
---
source: src/parser.rs
assertion_line: 2416
expression: "parse(\"a.b\")"
---
Input:

a.b

Result:

Expression {
    span: Index(
        2,
    ),
    typ: RefCell {
        value: None,
    },
    expr: PropertyAccess {
        expression: Expression {
            span: Index(
                0,
            ),
            typ: RefCell {
                value: None,
            },
            expr: Identifier {
                module: None,
                identifier: Identifier(
                    Identifier {
                        name: SymbolU32 {
                            value: 1,
                        },
                        span: Index(
                            0,
                        ),
                    },
                ),
            },
        },
        property: Identifier {
            name: SymbolU32 {
                value: 2,
            },
            span: Index(
                1,
            ),
        },
    },
}
