src/snapshots/alma__parser__tests__test_expression__record-10.snap
---
source: src/parser.rs
assertion_line: 2432
expression: "parse(\"{ x = { x = 5 } }\")"
---
Input:

{ x = { x = 5 } }

Result:

Index(
    2,
)

{
    Index(
        0,
    ): Expression {
        span: Index(
            2,
        ),
        typ: RefCell {
            value: None,
        },
        expr: Float(
            5.0,
        ),
    },
    Index(
        1,
    ): Expression {
        span: Index(
            3,
        ),
        typ: RefCell {
            value: None,
        },
        expr: Record {
            fields: [
                (
                    Identifier {
                        name: SymbolU32 {
                            value: 1,
                        },
                        span: Index(
                            1,
                        ),
                    },
                    Index(
                        0,
                    ),
                ),
            ],
        },
    },
    Index(
        2,
    ): Expression {
        span: Index(
            4,
        ),
        typ: RefCell {
            value: None,
        },
        expr: Record {
            fields: [
                (
                    Identifier {
                        name: SymbolU32 {
                            value: 1,
                        },
                        span: Index(
                            0,
                        ),
                    },
                    Index(
                        1,
                    ),
                ),
            ],
        },
    },
}

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            6,
        ),
        end: Index(
            6,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            3,
        ),
        end: Index(
            7,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            8,
        ),
    },
}
