src/snapshots/alma__parser__tests__test_expression__record-11.snap
---
source: src/parser.rs
assertion_line: 3010
expression: "parse(\"{ x }\")"
---
Input:

{ x }

Result:

{ 0:5
    x 2:3 :
        Identifier x 2:3 2:3
}
