src/snapshots/alma__parser__tests__test_expression__record-12.snap
---
source: src/parser.rs
assertion_line: 3011
expression: "parse(\"{ x, y }\")"
---
Input:

{ x, y }

Result:

{ 0:8
    x 2:3 :
        Identifier x 2:3 2:3
    y 5:6 :
        Identifier y 5:6 5:6
}
