src/snapshots/alma__parser__tests__test_expression__record-3.snap
---
source: src/parser.rs
assertion_line: 2999
expression: "parse(\"{ 1 : 5 }\")"
---
Input:

{ 1 : 5 }

Result:

Test.alma:1:4

Expected a record literal `{ x: 1, y: 2 }` or a record update `{ record | x: 5, y: 4 }`, but instead found: `:`

  1│  { 1 : 5 }
   │      ↑

Error {
    kind: InvalidRecordFieldsOrExtensibleRecordExpression,
    token: Token {
        kind: Colon,
        indent: 0,
        start: 4,
        end: 5,
        line: 1,
        column: 4,
    },
}
