src/snapshots/alma__parser__tests__test_expression__record-4.snap
---
source: src/parser.rs
assertion_line: 2361
expression: "parse(\"{ x : 5 }\")"
---
Input:

{ x : 5 }

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        4,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Record(
            [
                (
                    Node {
                        start: Index(
                            1,
                        ),
                        end: Index(
                            1,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 1,
                            },
                        },
                    },
                    Node {
                        start: Index(
                            3,
                        ),
                        end: Index(
                            3,
                        ),
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                5.0,
                            ),
                        },
                    },
                ),
            ],
        ),
    },
}
