src/snapshots/alma__parser__tests__test_expression__record-8.snap
---
source: src/parser.rs
assertion_line: 2409
expression: "parse(\"{ x : 5 , y : 10 }\")"
---
Input:

{ x : 5 , y : 10 }

Result:

Expression {
    span: Index(
        4,
    ),
    typ: RefCell {
        value: None,
    },
    expr: Record {
        fields: [
            (
                Identifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
                Expression {
                    span: Index(
                        1,
                    ),
                    typ: RefCell {
                        value: None,
                    },
                    expr: Float(
                        5.0,
                    ),
                },
            ),
            (
                Identifier {
                    name: SymbolU32 {
                        value: 3,
                    },
                    span: Index(
                        2,
                    ),
                },
                Expression {
                    span: Index(
                        3,
                    ),
                    typ: RefCell {
                        value: None,
                    },
                    expr: Float(
                        10.0,
                    ),
                },
            ),
        ],
    },
}
